# PROJECT-CODEX-ONE

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  railway.json  render.yaml
infra/cloud/: README.md
polymarket_smart_copy_bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.ts  test_db.py  test_db2.py  tsconfig.json  vite.config.ts
polymarket_smart_copy_bot/alembic/: env.py
polymarket_smart_copy_bot/api/: control.py  dashboard.py  health.py  init.py  open_orders.py  positions.py  status.py  trades.py
polymarket_smart_copy_bot/config/: .env.example  settings.py  wallets.yaml
polymarket_smart_copy_bot/contracts/: __init__.py  execution_sidecar.py
polymarket_smart_copy_bot/core/: background_tasks.py  portfolio_tracker.py  risk_manager.py  trade_executor.py  trade_monitor.py  wallet_discovery.py  wallet_scorer.py
polymarket_smart_copy_bot/data/: database.py  execution_sidecar_client.py  polymarket_client.py
polymarket_smart_copy_bot/docs/: rust-sidecar-migration.md  trading-logic-analysis.md
polymarket_smart_copy_bot/models/: models.py  qualified_wallet.py
polymarket_smart_copy_bot/src/: App.tsx  index.css  main.tsx
polymarket_smart_copy_bot/tests/: test_background_positions_api.py  test_dashboard_control.py  test_health.py  test_lottery_filter.py  test_observability_endpoints.py  test_polymarket_client_orders.py  (+7 more)
services/polymarket-execution-rs/: Cargo.toml  README.md
services/polymarket-execution-rs/src/: main.rs
(+75 files in other folders)
